--- a/results/COPDGene_and_DECAMP_Clustering_Results_version_2.html
+++ b/results/COPDGene_and_DECAMP_Clustering_Results_version_2.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Samuel Ash" />
 
-<meta name="date" content="2018-12-07" />
+<meta name="date" content="2018-12-14" />
 
 <title>COPDGene/DECAMP Radiologic Clustering Project - Results Version 2</title>
 
@@ -142,7 +142,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">COPDGene/DECAMP Radiologic Clustering Project - Results Version 2</h1>
 <h4 class="author"><em>Samuel Ash</em></h4>
-<h4 class="date"><em>2018-12-07</em></h4>
+<h4 class="date"><em>2018-12-14</em></h4>
 
 </div>
 
@@ -169,6 +169,7 @@ $(document).ready(function () {
 <li><a href="#comparison-of-copdgene-clusters-with-regard-to-progression-over-5-years-of-follow-up"><span class="toc-section-number">3.4</span> Comparison of COPDGene clusters with regard to progression over 5 years of follow up:</a><ul>
 <li><a href="#clinical-progression"><span class="toc-section-number">3.4.1</span> Clinical progression</a></li>
 <li><a href="#radiographic-emphysema-progression-in-copdgene"><span class="toc-section-number">3.4.2</span> Radiographic (emphysema) progression in COPDGene:</a></li>
+<li><a href="#summary-table-of-longitudinal-changes"><span class="toc-section-number">3.4.3</span> Summary Table of Longitudinal Changes:</a></li>
 </ul></li>
 <li><a href="#exacerbations-in-copdgene"><span class="toc-section-number">3.5</span> Exacerbations in COPDGene</a><ul>
 <li><a href="#exacerbation-rate-by-cluster"><span class="toc-section-number">3.5.1</span> Exacerbation Rate by Cluster</a></li>
@@ -842,7 +843,198 @@ emphysema_prog_uni_fit &lt;- lmer(percent_emphysema ~ years + cluster_decamp_f*y
 #summary(emphysema_prog_uni_fit)[[10]]
 #confint(emphysema_prog_uni_fit)</code></pre>
 <p>Mixed effects model using random intercepts and slopes. Methods notes: Note that this analysis is limited to those individuals who were scanned using the same scanner make and model for both visits (n=2354)</p>
-<p>Results notes: The results are expressed in percentage of lung occupied by emphysema. Briefly, over the course of follow up, those individuals in the emphysema predominant cluster gained 0.3% more emphysema (absolute change) (Confidence Interval: 0.13% to 0.47%) than those in the reference group (p=&lt; 0.001) and those in the interstitial predominant group gained 0.13% more emphysema (Confidence Interval: 0.03 to 0.23) than those in the reference group (p== 0.011).</p>
+<p>Results notes: The results are expressed in percentage of lung occupied by emphysema. Briefly, over the course of follow up, those individuals in the emphysema predominant cluster gained 0.3% more emphysema (absolute change) (Confidence Interval: 0.13% to 0.47%) than those in the reference group (p&lt; 0.001) and those in the interstitial predominant group gained 0.13% more emphysema (Confidence Interval: 0.03 to 0.23) than those in the reference group (p= 0.011).</p>
+</div>
+<div id="summary-table-of-longitudinal-changes" class="section level3">
+<h3><span class="header-section-number">3.4.3</span> Summary Table of Longitudinal Changes:</h3>
+<pre class="r"><code>fev1_sum_table &lt;- cbind(summary(fev1_prog_uni_fit)[[10]][5:6,1],
+                        confint(fev1_prog_uni_fit)[8:9,],
+                        summary(fev1_prog_uni_fit)[[10]][5:6,5])
+
+smwd_sum_table &lt;- cbind(summary(distwalked_prog_uni_fit)[[10]][5:6,1],
+                        confint(distwalked_prog_uni_fit)[8:9,],
+                        summary(distwalked_prog_uni_fit)[[10]][5:6,5])
+
+emph_sum_table &lt;- cbind(summary(emphysema_prog_uni_fit)[[10]][5:6,1],
+                        confint(emphysema_prog_uni_fit)[8:9,],
+                        summary(emphysema_prog_uni_fit)[[10]][5:6,5])
+
+
+cont_multi_table &lt;- rbind(fev1_sum_table,smwd_sum_table,emph_sum_table)
+
+row.names(cont_multi_table) &lt;- c(&quot;Emphysema Predominant&quot;,&quot;Interstitial Predominant&quot;,
+                                 &quot;Emphysema Predominant&quot;,&quot;Interstitial Predominant&quot;,
+                                 &quot;Emphysema Predominant&quot;,&quot;Interstitial Predominant&quot;)
+kable(cont_multi_table,row.names=TRUE,col.names=c(&quot;Difference Compared to Preserved&quot;,&quot;Lower Limit&quot;,&quot;Upper Limit&quot;,&quot;p&quot;),
+      align=&quot;c&quot;,digits=c(2,2,2,9)) %&gt;% 
+  add_header_above(c(&quot; &quot; = 2, &quot;Confidence Interval&quot; = 2, &quot; &quot; = 1)) %&gt;%
+  kable_styling(bootstrap_options = &quot;striped&quot;, full_width = F) %&gt;% 
+  footnote(general=&quot;Differences in change during follow-up expressed as compared to preseved cluster&quot;) %&gt;% 
+  group_rows(&quot;Percent Predicted Forced Expiratory Volume in One Second&quot;,1,2) %&gt;% 
+  group_rows(&quot;Six Minute Walk Distance (Feet)&quot;,3,4) %&gt;% 
+  group_rows(&quot;Percent Emphysema&quot;,5,6)</code></pre>
+<table class="table table-striped" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="border-bottom:hidden" colspan="2">
+</th>
+<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px;">
+Confidence Interval
+</div>
+</th>
+<th style="border-bottom:hidden" colspan="1">
+</th>
+</tr>
+<tr>
+<th style="text-align:left;">
+</th>
+<th style="text-align:center;">
+Difference Compared to Preserved
+</th>
+<th style="text-align:center;">
+Lower Limit
+</th>
+<th style="text-align:center;">
+Upper Limit
+</th>
+<th style="text-align:center;">
+p
+</th>
+</tr>
+</thead>
+<tbody>
+<tr grouplength="2">
+<td colspan="5" style="border-bottom: 1px solid;">
+<strong>Percent Predicted Forced Expiratory Volume in One Second</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+Emphysema Predominant
+</td>
+<td style="text-align:center;">
+-0.66
+</td>
+<td style="text-align:center;">
+-0.87
+</td>
+<td style="text-align:center;">
+-0.44
+</td>
+<td style="text-align:center;">
+0.000000002
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+Interstitial Predominant
+</td>
+<td style="text-align:center;">
+0.02
+</td>
+<td style="text-align:center;">
+-0.10
+</td>
+<td style="text-align:center;">
+0.15
+</td>
+<td style="text-align:center;">
+0.702680939
+</td>
+</tr>
+<tr grouplength="2">
+<td colspan="5" style="border-bottom: 1px solid;">
+<strong>Six Minute Walk Distance (Feet)</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+Emphysema Predominant
+</td>
+<td style="text-align:center;">
+-15.94
+</td>
+<td style="text-align:center;">
+-23.36
+</td>
+<td style="text-align:center;">
+-8.52
+</td>
+<td style="text-align:center;">
+0.000024386
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+Interstitial Predominant
+</td>
+<td style="text-align:center;">
+-6.17
+</td>
+<td style="text-align:center;">
+-10.62
+</td>
+<td style="text-align:center;">
+-1.72
+</td>
+<td style="text-align:center;">
+0.006568967
+</td>
+</tr>
+<tr grouplength="2">
+<td colspan="5" style="border-bottom: 1px solid;">
+<strong>Percent Emphysema</strong>
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+Emphysema Predominant
+</td>
+<td style="text-align:center;">
+0.30
+</td>
+<td style="text-align:center;">
+0.13
+</td>
+<td style="text-align:center;">
+0.47
+</td>
+<td style="text-align:center;">
+0.000410353
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+Interstitial Predominant
+</td>
+<td style="text-align:center;">
+0.13
+</td>
+<td style="text-align:center;">
+0.03
+</td>
+<td style="text-align:center;">
+0.23
+</td>
+<td style="text-align:center;">
+0.010602220
+</td>
+</tr>
+</tbody>
+<tfoot>
+<tr>
+<td style="padding: 0; border: 0;" colspan="100%">
+<span style="font-style: italic;">Note: </span>
+</td>
+</tr>
+<tr>
+<td style="padding: 0; border: 0;" colspan="100%">
+<sup></sup> Differences in change during follow-up expressed as compared to preseved cluster
+</td>
+</tr>
+</tfoot>
+</table>
 </div>
 </div>
 <div id="exacerbations-in-copdgene" class="section level2">
